tests/lean/error_full_names.lean.expected.out
error_full_names.lean:4:6: error: failed to synthesize type class instance for
⊢ has_zero nat
error_full_names.lean:8:6: error: type mismatch at application
  nat.succ nat.zero
term
  nat.zero
has type
  nat
but is expected to have type
  ℕ
